# docspatch

./: .gitignore  LICENSE  README.md  config.toml.example  context.md  pyproject.toml  tasks.md
docspatch/cli/: main.py
docspatch/graph/: state.py
docspatch/graph/graphs/: clg_graph.py  docs_graph.py  init_graph.py  readme_graph.py  review_graph.py
docspatch/graph/nodes/: ast_parser.py  batcher.py  clg_writer.py  docwriter.py  hash_check.py  preview.py  readme_writer.py  reviewer.py  scanner.py  significance.py  size_check.py  writer.py
docspatch/utils/: cache.py  config.py  differ.py  errors.py  git.py  llm.py  ui.py
