[project]
name = "docspatch"
version = "0.1.0"
description = "BYOK CLI tool that auto-generates and updates code documentation"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.14"
dependencies = [
    "gitpython>=3.1.47",
    "langchain-anthropic>=0.3.0",
    "langchain-core>=1.3.0",
    "langchain-google-genai>=4.2.2",
    "langchain-openai>=0.3.0",
    "langgraph>=1.1.9",
    "questionary>=2.1.1",
    "rich>=15.0.0",
    "tomli-w>=1.2.0",
    "typer>=0.24.1",
]

[project.scripts]
dp = "docspatch.cli.main:app"
docspatch = "docspatch.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.15.11",
]
